--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,12 +2,28 @@
   padding: 10px;
   margin: 50px auto;
   max-width: 350px;
-  border: 1px solid #9fd3c7;
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   background: #9fd3c7;
-  color: #385170;
-  opacity: 0.93;
+  color: #ffffff;
+  opacity: 0.83;
+}
+
+.Weather .btn:hover {
+  color: white;
+  background: #4b5259;
+  transition: all 100ms ease-in-out;
+}
+.background-video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .Weather footer {
@@ -15,5 +31,5 @@
 }
 
 .Weather footer a {
-  color: #385170;
+  color: white;
 }
